--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cheerio": "^1.0.0-rc.2",
     "http": "0.0.0",
     "iconv-lite": "^0.4.24",
+    "mysql": "^2.16.0",
     "puppeteer": "^1.10.0",
     "superagent": "^4.0.0-beta.5",
     "sync-request": "^6.0.0"
